--- a/index.html
+++ b/index.html
@@ -96,12 +96,13 @@
           </div>
 
           <div style="margin-top:12px" class="bio">
-            Hi — I'm Gertrude. I build reproducible data-analysis pipelines, teach statistics, and design experiments. I enjoy turning messy data into clear, actionable insights.
+            Hi — I'm Gertrude. I build reproducible data-analysis , teach statistics, and design experiments. I enjoy turning messy data into clear, actionable insights.
           </div>
 
           <div style="margin-top:14px">
             <strong>Skills</strong>
             <div class="skills">
+              <div class="skill">Data Analysis</div>
               <div class="skill">R</div>
               <div class="skill">Python</div>
               <div class="skill">Design of Experiments</div>
@@ -156,13 +157,13 @@
           <h3 style="margin:0">Contact</h3>
           <p class="lead" style="margin-top:6px">Want to work together or request a lesson? Send a message.</p>
 
-          <form id="contact" action="mailto:your@email.example" method="post" enctype="text/plain">
+          <form id="contact" action="mailto: gertrudeamam@gmail.com" method="post" enctype="text/plain">
             <input type="text" name="name" placeholder="Your name" required>
             <input type="email" name="email" placeholder="Email" required>
             <textarea name="message" placeholder="Message" required></textarea>
             <div style="display:flex; gap:8px">
               <button class="btn" type="submit">Send</button>
-              <a class="outline" href="mailto:your@email.example">Email</a>
+              <a class="outline" href="mailto: gertrudeamam@gmail.com">Email</a>
             </div>
           </form>
 
